[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Godot.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.14902, 0.172549, 0.231373, 1 )

[node name="Godot" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -180.0
margin_right = 240.0
margin_bottom = 180.0
rect_min_size = Vector2( 480, 360 )
popup_exclusive = true
window_title = "Godot Engine - Project Manager "
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="VB" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VersionLabel" type="Label" parent="VB"]
margin_top = -1.0
margin_right = 480.0
margin_bottom = 23.0
rect_min_size = Vector2( 0, 24 )
text = "v3.2.3-official"
align = 2
valign = 1

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Projects" type="Control" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HB" type="HBoxContainer" parent="TabContainer/Projects"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="TabContainer/Projects/HB"]
margin_right = 379.0
margin_bottom = 324.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Projects/HB/PanelContainer"]
margin_right = 379.0
margin_bottom = 324.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Projects/HB/PanelContainer/ScrollContainer"]
margin_right = 379.0
margin_bottom = 324.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VB" type="VBoxContainer" parent="TabContainer/Projects/HB"]
margin_left = 383.0
margin_right = 472.0
margin_bottom = 324.0

[node name="EditButton" type="Button" parent="TabContainer/Projects/HB/VB"]
margin_right = 89.0
margin_bottom = 20.0
rect_min_size = Vector2( 64, 0 )
disabled = true
text = "Edit"

[node name="RunButton" type="Button" parent="TabContainer/Projects/HB/VB"]
margin_top = 24.0
margin_right = 89.0
margin_bottom = 44.0
rect_min_size = Vector2( 64, 0 )
disabled = true
text = "Run"

[node name="HSeparator" type="HSeparator" parent="TabContainer/Projects/HB/VB"]
margin_top = 48.0
margin_right = 89.0
margin_bottom = 52.0

[node name="ScanButton" type="Button" parent="TabContainer/Projects/HB/VB"]
margin_top = 56.0
margin_right = 89.0
margin_bottom = 76.0
rect_min_size = Vector2( 64, 0 )
disabled = true
text = "Scan"

[node name="HSeparator2" type="HSeparator" parent="TabContainer/Projects/HB/VB"]
margin_top = 80.0
margin_right = 89.0
margin_bottom = 84.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewButton" type="Button" parent="TabContainer/Projects/HB/VB"]
margin_top = 88.0
margin_right = 89.0
margin_bottom = 108.0
rect_min_size = Vector2( 64, 0 )
text = "New Project"

[node name="ImportButton" type="Button" parent="TabContainer/Projects/HB/VB"]
margin_top = 112.0
margin_right = 89.0
margin_bottom = 132.0
rect_min_size = Vector2( 64, 0 )
text = "Import"

[node name="RenameButton" type="Button" parent="TabContainer/Projects/HB/VB"]
margin_top = 136.0
margin_right = 89.0
margin_bottom = 156.0
rect_min_size = Vector2( 64, 0 )
disabled = true
text = "Rename"

[node name="RemoveButton" type="Button" parent="TabContainer/Projects/HB/VB"]
margin_top = 160.0
margin_right = 89.0
margin_bottom = 180.0
rect_min_size = Vector2( 64, 0 )
disabled = true
text = "Remove"
